# need_solver

./: .gitignore  README.md  pyproject.toml
.specification/: architecture.md  data.md  fazzy4.md  main.md  object.md  user.md  user2object.md
data/: interview_20260114_235444.json  interview_20260115_003635.json
domains/dog_breeds/: ARCHITECTURE.md  config.json  data-spec.md  explainer.py  interview.py  matcher.py  user_profile.py
domains/dog_breeds/content/: breeds.json  logical_ops.json  object_features.json  user_needs.json
domains/dog_breeds/data/: interview_20260113_160353.json  test_explanation_data.json  test_interview_result.json
domains/dog_breeds/extracted/: afghan-hound.json  airedale-terrier.json  akita.json  alaskan-malamute.json  american-bulldog.json  american-bully.json  american-eskimo-dog.json  american-foxhound.json  american-hairless-terrier.json  american-pit-bull-terrier.json  american-staffordshire-terrier.json  american-water-spaniel.json  anatolian-shepherd-dog.json  aussiedoodle.json  australian-cattle-dog.json  australian-shepherd.json  barbet.json  basenji.json  basset-hound.json  beagle.json  beauceron.json  bedlington-terrier.json  belgian-laekenois.json  belgian-malinois.json  belgian-sheepdog.json  belgian-tervuren.json  bernedoodle.json  bernese-mountain-dog.json  bichon-frise.json  biewer-terrier.json  black-and-tan-coonhound.json  bloodhound.json  bluetick-coonhound.json  border-collie.json  border-terrier.json  borzoi.json  boston-terrier.json  boxer.json  (+143 more)
src/cli/: interview.py
src/query_planner/: exp_test.py
(+604 files in other folders)
